SOURCE/objects/PreAssesment__c.object
<CustomObject>
    <fields>
        <fullName>Any_Legal_History_Consequences__c</fullName>
        <description>Any Legal History/ Consequences</description>
        <label>Any Legal History/ Consequences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_Previous_Treatment__c</fullName>
        <label>Any Previous Treatment?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anyone_use_Alcohol_Drugs_In_Their_Home__c</fullName>
        <label>Anyone use Alcohol/ Drugs In Their Home?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_for_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_able_to_go_up_and_down_stairs__c</fullName>
        <inlineHelpText>Are you able to walk up and down stairs?</inlineHelpText>
        <label>Are you able to go up and down stairs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_able_to_take_shower__c</fullName>
        <inlineHelpText>Are you able to go in and out of shower without help?</inlineHelpText>
        <label>Are you able to take shower?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_able_to_walk_without_help__c</fullName>
        <inlineHelpText>are you able to walk without assistance?</inlineHelpText>
        <label>Are you able to walk without help?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioral_Medication_History__c</fullName>
        <label>Behavioral Medication History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_DOB__c</fullName>
        <label>Client DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <label>Client First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <label>Client Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Ocurring_Disorders__c</fullName>
        <label>Co-Ocurring  Disorders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD/ADHD</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Mood__c</fullName>
        <description>Current Mood</description>
        <label>Current Mood</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_on_Medication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current on Medication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Mental_Health_Diagnosis__c</fullName>
        <label>Date of Mental Health Diagnosis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Self_Harm__c</fullName>
        <label>Date of Self-Harm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Sucide_Attempt__c</fullName>
        <label>Date of Sucide Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_yo_have_any_broken_bones_or_sprains__c</fullName>
        <inlineHelpText>Do you currently have any broken bones or sprains?</inlineHelpText>
        <label>Do yo have any broken bones or sprains?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_Walk_without_assis__c</fullName>
        <label>If No, Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_broken_bones__c</fullName>
        <label>If Yes, Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_get_in_and_out__c</fullName>
        <label>If No, Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_walk_up_and_down__c</fullName>
        <label>If No, Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Medication_Effective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Medication Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Diagnosis__c</fullName>
        <description>Medical Diagnosis</description>
        <label>Medical Diagnosis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Pre_Screen_Compete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Pre Screen Compete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pre-Assessments</relationshipLabel>
        <relationshipName>Pre_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seizure_DT_Description__c</fullName>
        <description>Seizure/DT Description</description>
        <label>Seizure/DT Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seizure_DT_History__c</fullName>
        <description>Seizure/ DT History</description>
        <label>Seizure/ DT History</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seizures</fullName>
                </value>
                <value>
                    <fullName>Delirium</fullName>
                </value>
                <value>
                    <fullName>Blackouts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Harm_Details__c</fullName>
        <description>Self-Harm Details</description>
        <label>Self-Harm Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Self_Harm_History__c</fullName>
        <description>Self-Harm History</description>
        <label>Self-Harm History</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>To Choose Stage Approval You Must fill Approver Lookup</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Submit For Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approval Denied</fullName>
                </value>
                <value>
                    <fullName>Assessment Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substances_Use_History__c</fullName>
        <label>Substances Use History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Substances_Used__c</fullName>
        <label>Substances  Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alchohal</fullName>
                </value>
                <value>
                    <fullName>Cocaine</fullName>
                </value>
                <value>
                    <fullName>DMT</fullName>
                </value>
                <value>
                    <fullName>Ayahuasca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sucide_Attempt_Details__c</fullName>
        <label>Suicide Attempt Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suicide_Attempt_History__c</fullName>
        <label>Suicide Attempt History</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taking_Any_Medications__c</fullName>
        <label>Taking Any Medications?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Taking_Them_Regularly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taking Them Regularly?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_To_Approve_Assesment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Assesment Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pre-Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>PreAssesment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>User_should_fill_Assigned_To_for_approva</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(IsChanged(Stage__c),ISPICKVAL(Stage__c,&quot;Submit For Approval&quot;)),

IF(ISBLANK( User_To_Approve_Assesment__c ),true,false),false)</errorConditionFormula>
        <errorMessage>For Submitting Approval You must fill &quot; Pre-Assesment Approver&quot; Field</errorMessage>
    </validationRules>
</CustomObject>